--- a/src/main/webapp/resources/static/style.css
+++ b/src/main/webapp/resources/static/style.css
@@ -3,7 +3,7 @@
 body {
 	font-size: 12px;
 	font-family: Arial, Helvetica, sans-serif;
-	margin: 0px;
+	margin: 0;
 	font-weight: normal
 }
 
@@ -13,19 +13,18 @@ header {
 	height: 30px;
 	background-color:#9a9a9a;
 	color: #fff;
-	box-shadow: 0px 2px 2px #ccc
+	box-shadow: 0 2px 2px #ccc
 }
 
 h1 {
 	font-size: 24px;
 	font-weight: 500;
-	padding: 0px;
-	margin: 0px;
-	margin-bottom: 10px
+	padding: 0;
+	margin: 0 0 10px;
 }
 
 #conteudo {
-	padding: 0px 8px
+	padding: 0 8px
 }
 
 footer {
