--- a/src/main/webapp/WEB-INF/template/layout.xhtml
+++ b/src/main/webapp/WEB-INF/template/layout.xhtml
@@ -23,5 +23,12 @@
     </div>
 
     <footer> DRS Tecnologias</footer>
+
+    <h:form>
+        <p:confirmDialog global="true">
+            <p:commandButton value="Não" icon="fa fa-remove" styleClass="ui-confirmdialog-no" />
+            <p:commandButton value="Sim" icon="fa fa-check" styleClass="ui-confirmdialog-yes" />
+        </p:confirmDialog>
+    </h:form>
 </h:body>
 </html>
